# rekenkamer-report-dashboard

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.test  build-and-push.sh  docker-compose.test.yml  docker-compose.yml  example.env  pyproject.toml  readme.md  requirements.txt  run_dashboard.sh  test.env
.github/actions/: ci.yml
.github/workflows/: ci.yml
.streamlit/: secrets.example.toml
dashboard/: 01_🔎_Zoeken.py  01_🔎_Zoeken_algemene_bronnen.py  01_🔎_Zoeken_openbare_bronnen.py  01_🔎_rapporten_zoeker.py  config.py
dashboard/helpers/: airflow.py  app_engine.py  auth.py  config.py  elastic.py  input.py  logger.py  minio.py  page_config.py  plots.py  state.py  table.py  test_input.py  test_table.py  zip.py
dashboard/pages/: 02_🕵️_Zoeken_eigen_bron.py  02_🤓_Statistieken.py  03_🤓_Statistieken.py  04_🤨_FAQ.py  05_🚧_Roadmap.py
dashboard/tests/: test_plots.py  test_search.py
dashboard/tests/mocks/: engines.json  healthcheck.json  search-custom-cyber.json  search-custom-digitalisering.json  search.json
dashboard/views/search/: form.py  plots_tab.py  results_tab.py  tabs.py  test_results_tab.py  zip_tab.py
mocks/elastic/config/: public.json
